config/04-kubernetes/40-auth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'auth.hub.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: tekton-hub-auth
spec:
  rules:
  - host: auth.hub.tekton.dev
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 4200
        path: /*
  tls:
  - hosts:
    - auth.hub.tekton.dev
    secretName: auth-hub-tekton-dev-tls
